last update (unfinished)

--- a/views/Doctor.ejs
+++ b/views/Doctor.ejs
@@ -52,9 +52,11 @@
         <div class="sidebar">
             <h1>Klinik Sehat</h1> 
             <div class="toolbar">
+                <a href="/profile"><button>Profil saya</button></a>
                 <a href="/doctors"> <button>Doctor</button></a>
-                <a href=""> <button>Appointment Schedule</button></a>
-                <a href=""> <button>List Appointment</button></a>
+                <a href="/appointments"> <button>Appointment Schedule</button></a>
+                <a href="/appointments/add"> <button>Make Appointment</button></a>
+                <a href="/logout"><button>Logout</button></a>
             </div>
         </div>
         <div class="content">
