--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -55,7 +55,7 @@
 <body>
 
 <div class="container">
-    <h2>Login here</h2>
+    <h2>Silahkan login</h2>
     <% if (error) { %>
         <p style="color: red; font-weight: bold;"><%= error %></p>
        <% } %>
@@ -68,7 +68,7 @@
             <label for="password">Kata Sandi:</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">Masuk</button>
     </form>
 </div>
 
