--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -52,10 +52,13 @@
         <div class="sidebar">
             <h1>Klinik Sehat</h1> 
             <div class="toolbar">
-                <a href="/doctors"> <button>Doctor</button></a>
-                <a href=""> <button>Appointment Schedule</button></a>
-                <a href=""> <button>List Appointment</button></a>
+                <a href="/profile"><button>Profil saya</button></a>
+                <a href="/doctors"><button>Doctor</button></a>
+                <a href="/appointments"><button>Appointment Schedule</button></a>
+                <a href="/appointments/add"><button>Make Appointment</button></a>
+                <a href="/logout"><button>Logout</button></a>
             </div>
         </div>
+    </div>
 </body>
 </html>
